# pytest-testbook

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests.ipynb  appveyor.yml  pyproject.toml  setup.py  tox.ini  vehicle_stub_and_mock_test.ipynb
.github/workflows/: tests.yml
docs/: conf.py  index.rst  queue.md  threading.md
docs/troubleshooting/: How to force Jupyter to sync up folders.md
pytest_testbook/: __init__.py  hooks.py  playwright_setup.py  playwright_shutdown.py  plugin.py
tests/: IEC_62304_compliant_testbook.ipynb  Issue1706_Reproduce.md  an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests.ipynb  conftest.py  generate_notebook.py  test_persistent_playwright.ipynb  test_testbook.py  vehicle_control_system_test.ipynb  vehicle_stub_and_mock_test.ipynb
tests/reports/: an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests_20260520_203808_report_.ipynb
tests/reports/20260520/: an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests_20260520_204453_report_.ipynb  an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests_20260520_205634_report_.ipynb  an_example_of_using_jupyter_for_documenting_and_automating_bdd_style_tests_20260520_220049_report_.ipynb  vehicle_control_system_test_20260520_220050_report_.ipynb
tests/reports/20260529/: IEC_62304_compliant_testbook_20260529_073527_report_.ipynb  IEC_62304_compliant_testbook_20260529_082810_report_.ipynb
tests/testbooks/colo/Service_and_Order/: Provision Colo Service.ipynb
